--- a/src/app/guest/guestmaster.component.html
+++ b/src/app/guest/guestmaster.component.html
@@ -6,12 +6,27 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarText">
       <ul class="navbar-nav mr-auto">
-        <!-- <li class="nav-item active">
-          <a class="nav-link"  *ngIf="LoggedIn(true)" routerLink="/events">Events</a>
+        <li class="nav-item active">
+          <a class="nav-link"  *ngIf="IsAdmin(true)" routerLink="/home">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link"  *ngIf="LoggedIn(true)" routerLink="/special">Members</a>
-        </li> -->
+          <a class="nav-link"  *ngIf="IsAdmin(true)" routerLink="/home">Airlines</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link"  *ngIf="IsAdmin(true)" routerLink="/home">Flights</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link"  *ngIf="IsAdmin(true)" routerLink="/home">Schedule</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link"  *ngIf="IsUser(true)" routerLink="/search">New Booking</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link"  *ngIf="IsUser(true)" routerLink="/search">My Bookings</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link"  *ngIf="IsUser(true)" routerLink="/search">History</a>
+        </li>
       </ul>
       <ul class="navbar-nav">
         <li class="nav-item active">
