--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -10,7 +10,7 @@
                         <div class="form-group">
                             <label for="exampleInputEmail">UserName</label>
                             <input type="email" class="form-control" aria-describedby="emailHelp"
-                                placeholder="Enter email" [(ngModel)]="loginUserData.userName" required>
+                                placeholder="Enter username" [(ngModel)]="loginUserData.userName" required>
                         </div>
                         <div class="form-group">
                             <label for="exampleInputPassword">Password</label>
