--- a/src/app/guest/guestmaster.component.html
+++ b/src/app/guest/guestmaster.component.html
@@ -10,7 +10,7 @@
           <a class="nav-link"  *ngIf="IsAdmin(true)" routerLink="/home">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link"  *ngIf="IsAdmin(true)" routerLink="/home">Airlines</a>
+          <a class="nav-link"  *ngIf="IsAdmin(true)" routerLink="/airline">Airlines</a>
         </li>
         <li class="nav-item">
           <a class="nav-link"  *ngIf="IsAdmin(true)" routerLink="/home">Flights</a>
